About, start saving, how it works

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <img src="assets/img/logo.png" class="logo" alt="renew logo" />
 
             <div class="menu flex">
-                <a href="#">About</a>
-                <a href="#">Start Saving</a>
-                <a href="#">How it works</a>
+                <a href="/about.html">About</a>
+                <a href="/contact.html">Start Saving</a>
+                <a href="/how-it-works.html">How it works</a>
                 <a class="call-us btn flex" href="tel:+18445255555">Call Us: <span>844-525-5555</span></a>
             </div>
             <div class="call-us btn flex">
