--- a/how-it-works.html
+++ b/how-it-works.html
@@ -21,7 +21,7 @@
     <nav>
         <div class="grid page-width">
             <button class="hamburger" aria-label="Open menu">&#9776;</button>
-            <img src="assets/img/logo.png" class="logo" alt="renew logo" />
+            <a href="/"><img src="assets/img/logo.png" class="logo" alt="renew logo" /></a>
 
             <div class="menu flex">
                 <a href="/about.html">About</a>
@@ -47,62 +47,68 @@
                 <div class="expect-title">
                     <h1>What To Expect</h1>
                     <p>
-                      Transparency is important to us, so below is an overview of what to expect so that you feel confident beginning your relief journey.
+                        Transparency is important to us, so below is an overview of what to expect so that you feel
+                        confident beginning your relief journey.
                     </p>
                 </div>
                 <div class="expect-grid">
                     <div class="expect-item">
-                      <div class="content-column desktop">
-                        <img src="assets/img/free-consult.png" alt="Free Consultation">
-                      </div>
-                      <div class="content-number">
-                        <span class="number">1</span> 
-                        <span class="number-line"></span>
-                      </div>
-                      <div class="content-column">
-                        <img class="mobile" src="assets/img/free-consult.png" alt="Free Consultation">
-                        <h4>Get a Free Consultation</h4>
-                        <p>
-                          Speak to our team and answer a few questions about your debt and current financial circumstances so we can help you choose an option that is right for you.
-                        </p>
-                      </div>
-                    </div>
-                    <div class="expect-item">
-                      <div class="content-column desktop">
-                        <h4>Choose a Personalized Option</h4>
-                        <p>
-                          Our team will walk you through your options. Choose the one that’s best for you, and get ready to move beyond debt.
-                        </p>
-                      </div>
-                      <div class="content-number">
-                        <span class="number">2</span>
-                        <span class="number-line"></span>
-                      </div>
-                      <div class="content-column">
-                        <img src="assets/img/free-consult.png" alt="Free Consultation">
-                        <div class="mobile">
-                            <h4>Choose a Personalized Option</h4>
+                        <div class="content-column desktop">
+                            <img src="assets/img/free-consult.png" alt="Free Consultation">
+                        </div>
+                        <div class="content-number">
+                            <span class="number">1</span>
+                            <span class="number-line"></span>
+                        </div>
+                        <div class="content-column">
+                            <img class="mobile" src="assets/img/free-consult.png" alt="Free Consultation">
+                            <h4>Get a Free Consultation</h4>
                             <p>
-                              Our team will walk you through your options. Choose the one that’s best for you, and get ready to move beyond debt.
+                                Speak to our team and answer a few questions about your debt and current financial
+                                circumstances so we can help you choose an option that is right for you.
                             </p>
                         </div>
-                      </div>
                     </div>
                     <div class="expect-item">
-                      <div class="content-column desktop">
-                        <img src="assets/img/free-consult.png" alt="Free Consultation">
-                      </div>
-                      <div class="content-number">
-                        <span class="number">3</span>
-                        <span class="number-line"></span>
-                      </div>
-                      <div class="content-column">
-                        <img class="mobile" src="assets/img/free-consult.png" alt="Free Consultation">
-                        <h4>Be Debt Free in 24 to 48 Months!</h4>
-                        <p>
-                          Clients will begin to experience immediate financial relief with lower monthly payments and see real results in the first three to six months. Most clients' enrolled debt is behind them within 24 to 48 months.
-                        </p>
-                      </div>
+                        <div class="content-column desktop">
+                            <h4>Choose a Personalized Option</h4>
+                            <p>
+                                Our team will walk you through your options. Choose the one that’s best for you, and get
+                                ready to move beyond debt.
+                            </p>
+                        </div>
+                        <div class="content-number">
+                            <span class="number">2</span>
+                            <span class="number-line"></span>
+                        </div>
+                        <div class="content-column">
+                            <img src="assets/img/choose-option.png" alt="Free Consultation">
+                            <div class="mobile">
+                                <h4>Choose a Personalized Option</h4>
+                                <p>
+                                    Our team will walk you through your options. Choose the one that’s best for you, and
+                                    get ready to move beyond debt.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="expect-item">
+                        <div class="content-column desktop">
+                            <img src="assets/img/debt-free.png" alt="Free Consultation">
+                        </div>
+                        <div class="content-number">
+                            <span class="number">3</span>
+                            <span class="number-line"></span>
+                        </div>
+                        <div class="content-column">
+                            <img class="mobile" src="assets/img/debt-free.png" alt="Free Consultation">
+                            <h4>Be Debt Free in 24 to 48 Months!</h4>
+                            <p>
+                                Clients will begin to experience immediate financial relief with lower monthly payments
+                                and see real results in the first three to six months. Most clients' enrolled debt is
+                                behind them within 24 to 48 months.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -115,7 +121,7 @@
                 <div class="table-grid grid">
                     <div class="table-inner grid">
                         <h1 class="table-title">
-                          We Help With <span class="green">These Debts</span>
+                            We Help With <span class="green">These Debts</span>
                         </h1>
                     </div>
                     <div>
