--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <nav>
         <div class="grid page-width">
             <button class="hamburger" aria-label="Open menu">&#9776;</button>
-            <img src="assets/img/logo.png" class="logo" alt="renew logo" />
+            <a href="/"><img src="assets/img/logo.png" class="logo" alt="renew logo" /></a>
 
             <div class="menu flex">
                 <a href="/about.html">About</a>
