--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,11 @@
     <title>ReNew Debt Relief</title>
     <link rel="preload" href="assets/styles.css" as="style">
     <link rel="stylesheet" href="assets/styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -49,7 +54,7 @@
                         <h1 class="when-title">
                             Ready to get <span class="green">started?</span>
                         </h1>
-                        <p>
+                        <p class="regular-text">
                             It’s easy to start the process, fill out the form and see if you qualify.
                         </p>
                         <div class="when-checklist grid">
@@ -93,7 +98,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <div class="btn btn-yellow center">
+                                    <div class="btn btn-yellow center" style="width:100%;">
                                         <a href="#" class="black">GET A QUOTE</a>
                                     </div>
                                 </div>
