--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>ReNew Debt Relief</title>
     <link rel="preload" href="assets/styles.css" as="style">
     <link rel="stylesheet" href="assets/styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -277,13 +282,13 @@
                 <h2 class="resolve-debt-heading grey book">Be Debt Free in 24 to 48 Months!</h2>
                 <h1 class="resolve-debt-title">We Can <span>Resolve Your Debt!</span></h1>
                 <div class="resolve-debt-items">
-                    <span class="debt-item">✔ High Interest Rates</span>
-                    <span class="debt-item">✔ Personal Loans</span>
-                    <span class="debt-item">✔ Credit Cards</span>
-                    <span class="debt-item">✔ Collections</span>
-                    <span class="debt-item">✔ Some Student Loans</span>
-                    <span class="debt-item">✔ Medical Bills</span>
-                    <span class="debt-item">✔ Repossessions</span>
+                    <span class="debt-item"><img src="assets/img/checkgreen.svg" /> High Interest Rates</span>
+                    <span class="debt-item"><img src="assets/img/checkgreen.svg" /> Personal Loans</span>
+                    <span class="debt-item"><img src="assets/img/checkgreen.svg" /> Credit Cards</span>
+                    <span class="debt-item"><img src="assets/img/checkgreen.svg" /> Collections</span>
+                    <span class="debt-item"><img src="assets/img/checkgreen.svg" /> Some Student Loans</span>
+                    <span class="debt-item"><img src="assets/img/checkgreen.svg" /> Medical Bills</span>
+                    <span class="debt-item"><img src="assets/img/checkgreen.svg" /> Repossessions</span>
                 </div>
                 <div class="arrow-container">
                     <img src="assets/img/Arrow 4.svg" alt="Down arrow" class="down-arrow">
@@ -403,7 +408,7 @@
             <div class="page-width contact-container">
                 <div class="contact-inner grid">
                     <div class="contact-content grid">
-                        <h1 class="contact-title">Get In Touch With Us</h1>
+                        <h1 class="contact-title">Get In Touch<br>With Us.</h1>
                         <p class="contact-text regular-text">Start here and get a free debt reduction quote.</p>
                         <span class="offers">We Offer:</span>
                         <div class="checklist-contact grid">
@@ -455,7 +460,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <div class="btn btn-yellow center">
+                                    <div class="btn btn-yellow center" style="width:100%;">
                                         <a href="#" class="black">GET A QUOTE</a>
                                     </div>
                                 </div>
