--- a/about.html
+++ b/about.html
@@ -7,6 +7,11 @@
     <title>ReNew Debt Relief</title>
     <link rel="preload" href="assets/styles.css" as="style">
     <link rel="stylesheet" href="assets/styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -46,30 +51,16 @@
                 <div class="about-content grid">
                     <h1><span style="color: #0FA353">Our</span> Mission</h1>
                     <p class="regular-text">
-                        Renew Debt Relief is steadfast in its mission to make a substantial impact on individuals and
-                        families struggling with debt, guiding them toward a path of financial freedom. Our meticulously
-                        crafted financial services are designed to assist people in overcoming debt challenges and
-                        achieving enduring financial peace of mind.
+                        Renew Debt Relief is committed to helping individuals and families overcome debt challenges and
+                        achieve lasting financial freedom. Our transparent and customized financial services, crafted by
+                        a dedicated team of experts, aim to transform lives across the United States. Through
+                        collaboration, excellence, and tailored plans, we assist a growing number of clients in breaking
+                        free from financial struggles.
                         <br /><br />
-                        Acknowledging the complexity of financial services, we prioritize transparency and tailor our
-                        offerings to meet the unique needs of each client. Our dedicated team of financial experts at
-                        Renew Debt Relief has been diligently building easy-to-follow financial plans that have the
-                        power to transform lives across the United States.<br />
-                        Collaboration and a commitment to excellence are at the core of our values. As we've grown over
-                        the years, we've expanded our reach to assist a growing number of individuals who are eager to
-                        break free from financial struggles. Our professional and diverse team at Renew Debt Relief
-                        shares a passion for helping people achieve their financial goals, ensuring excellence at every
-                        level for both clients and employees.
-                        <br /><br />
-                        Our options are not only easy to follow but also customized to individual needs. Beyond helping
-                        clients bid farewell to debt and regain financial control, we provide resources, tools, and
-                        exceptional customer service to set them up for success, fostering the skills and confidence
-                        needed to thrive.
-                        <br /><br />
-                        At Renew Debt Relief, we are dedicated to creating lasting and meaningful impacts. Our
-                        continuous efforts to build genuine connections with clients are essential for those facing the
-                        challenges of debt. We take pride in the profound and positive changes our assistance brings to
-                        their lives.
+                        Our easy-to-follow options, coupled with resources and exceptional customer service, empower
+                        clients to thrive and regain control over their finances. At Renew Debt Relief, we take pride in
+                        creating genuine connections and bringing about profound positive changes in the lives of those
+                        facing debt challenges.
                     </p>
                     <div class="btn btn-yellow">
                         <a href="#" class="black">GET A QUOTE</a>
