--- a/how-it-works.html
+++ b/how-it-works.html
@@ -7,6 +7,11 @@
     <title>ReNew Debt Relief</title>
     <link rel="preload" href="assets/styles.css" as="style">
     <link rel="stylesheet" href="assets/styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -63,7 +68,7 @@
                         <div class="content-column">
                             <img class="mobile" src="assets/img/free-consult.png" alt="Free Consultation">
                             <h4>Get a Free Consultation</h4>
-                            <p>
+                            <p class="regular-text">
                                 Speak to our team and answer a few questions about your debt and current financial
                                 circumstances so we can help you choose an option that is right for you.
                             </p>
@@ -72,7 +77,7 @@
                     <div class="expect-item">
                         <div class="content-column desktop">
                             <h4>Choose a Personalized Option</h4>
-                            <p>
+                            <p class="regular-text">
                                 Our team will walk you through your options. Choose the one that’s best for you, and get
                                 ready to move beyond debt.
                             </p>
@@ -85,7 +90,7 @@
                             <img src="assets/img/choose-option.png" alt="Free Consultation">
                             <div class="mobile">
                                 <h4>Choose a Personalized Option</h4>
-                                <p>
+                                <p class="regular-text">
                                     Our team will walk you through your options. Choose the one that’s best for you, and
                                     get ready to move beyond debt.
                                 </p>
@@ -103,7 +108,7 @@
                         <div class="content-column">
                             <img class="mobile" src="assets/img/debt-free.png" alt="Free Consultation">
                             <h4>Be Debt Free in 24 to 48 Months!</h4>
-                            <p>
+                            <p class="regular-text">
                                 Clients will begin to experience immediate financial relief with lower monthly payments
                                 and see real results in the first three to six months. Most clients' enrolled debt is
                                 behind them within 24 to 48 months.
@@ -125,7 +130,7 @@
                         </h1>
                     </div>
                     <div>
-                        <img src="assets/img/debt-table.jpg" alt="When to consider debt relief">
+                        <img src="assets/img/newtable.webp" alt="When to consider debt relief">
                     </div>
                 </div>
             </div>
@@ -138,7 +143,7 @@
             <div class="page-width contact-container">
                 <div class="contact-inner grid">
                     <div class="contact-content grid">
-                        <h1 class="contact-title">Get In Touch With Us</h1>
+                        <h1 class="contact-title">Get In Touch <br>With Us.</h1>
                         <p class="contact-text regular-text">Start here and get a free debt reduction quote.</p>
                         <span class="offers">We Offer:</span>
                         <div class="checklist-contact grid">
@@ -190,7 +195,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <div class="btn btn-yellow center">
+                                    <div class="btn btn-yellow center" style="width:100%;">
                                         <a href="#" class="black">GET A QUOTE</a>
                                     </div>
                                 </div>
